# academic-integrity-env

./: .gitignore  Dockerfile  README.md  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
academic_integrity_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py
